Fix splash page text alignment

--- a/src/pages/Splash/Splash.module.scss
+++ b/src/pages/Splash/Splash.module.scss
@@ -9,6 +9,12 @@
     width: 145px;
     height: 145px;
   }
+
+  h1 {
+    text-align: center;
+    align-items: center;
+    line-height: 1.5;
+  }
 }
 
 // Animation for Logo
